fixed security (enabled CORS to allow requests from frontend)